--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -136,6 +136,6 @@ li { list-style: none; }
   .el-button { height: 34px; line-height: 0; }
   .el-date-editor .el-range-separator { line-height: 27px; width: 10%; }
 }
-.el-table th { background-color: #f5f5f5; }
+.el-table th{ background-color: #f5f5f5 !important; }
 .table-handle {text-align: left; }
 .el-table table .cell { text-align: center; }
