--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -134,7 +134,7 @@ li { list-style: none; }
   .search .el-form-item { margin-bottom: 0; margin-left: 10px; }
   .el-input__inner { height: 34px; line-height: 34px; border-radius: 3px; padding: 0 10px; }
   .el-button { height: 34px; line-height: 0; }
-  .el-date-editor .el-range-separator { line-height: 27px; width: 10%; }
+  .el-date-editor .el-range-separator { line-height: 27px; width: 24px; }
 }
 .el-table th{ background-color: #f5f5f5 !important; }
 .table-handle {text-align: left; }
