--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -139,3 +139,8 @@ li { list-style: none; }
 .el-table th{ background-color: #f5f5f5 !important; }
 .table-handle {text-align: left; }
 .el-table table .cell { text-align: center; }
+
+.page-number {
+  padding: 15px;
+  text-align: right;
+}
