--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -122,7 +122,7 @@ li { list-style: none; }
   .el-carousel__item:nth-child(2n) { background-color: #99a9bf; }
   .el-carousel__item:nth-child(2n+1) { background-color: #d3dce6; }
   .swiper-content { height: 60px; position: absolute; bottom: 0; width: 100%; color: #fff; padding: 10px 30px; text-align: left; background: rgba(0, 0, 0, .2); }
-  .cat-img { width: 100%; height: 100%; }
+  .cat-img { width: 100%;}
   .zHome-timeline { width: 65%; margin-bottom: 20px; background: #fff; height: 560px; }
 }
 /* 面包屑导航 */
