--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -158,7 +158,7 @@ li { list-style: none; }
   #stroke-chart01{width:165px;height: 165px;}
 }
 .stroke-part02{
-  padding: 10px 10px;background: #f7f7f7;border-bottom: 1px solid #ddd;
+  padding: 10px 10px;background: #a3c0c1;border-bottom: 1px solid #ddd;
   .sp2-box{width: 33.33%;border-right: 1px solid #ddd;float: left;}
   .part02-title{
     padding: 5px 5px;
